# nebula-commander

./: .dockerignore  .gitattributes  .gitignore  DOCKER-SETUP.md  EMAIL_IMPLEMENTATION.md  FRONTEND_MIGRATION.md  LICENSE.md  README.md  RELEASES.md  USER_MANAGEMENT_IMPLEMENTATION.md  flake.nix  package-lock.json
.github/: README.md
.github/workflows/: README.md  bandit.yml  build-docker-images.yml  build-ncclient-binaries.yml  publish-pypi.yml  semgrep.yml
backend/: .gitignore  __init__.py  config.py  database.py  main.py  requirements.txt  test_rate_limit.py
backend/api/: __init__.py  access_grants.py  audit.py  auth.py  (+11 more)
client/: LICENSE  README.md  __init__.py  __main__.py  config.py  dns_apply.py  ncclient.py  pyproject.toml  token_store.py
client/binaries/: .gitignore  ARM64-BUILDS.md  QUICKSTART.md  README.md  build.py  ncclient.spec  requirements.txt
client/contrib/: dns-apply-linux.sh  dns-apply-windows.ps1
client/docker/: Dockerfile  docker-compose.yml  entrypoint.sh
client/docker/s6/dnsmasq/: run
client/docker/s6/ncclient/: run
client/examples/: README-startup.md  com.nixrtr.ncclient.plist  ncclient-run-windows.ps1  ncclient.env.example  ncclient.service
client/webui/: __init__.py  server.py
client/webui/static/: app.js  index.html  style.css
client/windows/: .gitignore  README.md  __init__.py  autostart.py  build.py  dialogs.py  icons.py  ncclient-tray.spec  tray.py
docker/: .dockerignore  .env.example  README.md  docker-compose-keycloak.yml  docker-compose.yml  download.sh
frontend/: LICENSE  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
nix/: module.nix  package.nix
(+80 files in other folders)
