[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nebula-commander"
version = "0.1.0"
description = "Nebula Commander device client (ncclient): enroll with a one-time code, then run as a daemon to pull config and certs and optionally orchestrate Nebula."
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.10"
authors = [
  { name = "NixRTR" }
]
keywords = ["nebula", "vpn", "commander", "ncclient", "dnclient"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Networking",
]
dependencies = [
  "requests>=2.28",
]

[project.optional-dependencies]
dev = [
  "build",
  "twine",
]

[project.urls]
Homepage = "https://github.com/NixRTR/nebula-commander"
Documentation = "https://github.com/NixRTR/nebula-commander/blob/main/client/README.md"
Repository = "https://github.com/NixRTR/nebula-commander"

[project.scripts]
ncclient = "client.ncclient:main"

# Build from client/: this directory is the "client" package (pyproject.toml lives inside it).
[tool.setuptools.package-dir]
"client" = "."
[tool.setuptools]
packages = ["client"]
